# LatticeSVG

./: .gitignore  404.html  LICENSE  README.md  demo.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/skills/markdown-outline/: SKILL.md
.github/workflows/: docs.yml
_build/features/: index.html
_build/proposals/: index.html
changelog/: index.html
docs/: changelog.en.md  changelog.md  changelog.zh.md  features.md  index.en.md  index.md  llms-full.txt  proposals.md
docs/_build/: features.md  proposals.md
docs/assets/stylesheets/: extra.css
docs/getting-started/: concepts.en.md  concepts.md  installation.en.md  installation.md  quickstart.en.md  quickstart.md
docs/reference/: css-properties.md  templates.en.md  templates.zh.md
docs/reference/api/: index.en.md  index.md  layout.en.md  layout.zh.md  markup.en.md  markup.md  math.md  math.zh.md  nodes.md  renderer.md  renderer.zh.md  style.md  text.md  text.zh.md
docs/tutorials/: advanced.md  advanced.zh.md  grid-layout.md  grid-layout.zh.md  node-types.en.md  node-types.zh.md  rich-text.md  rich-text.zh.md  styling.en.md  styling.zh.md  text-typography.md  text-typography.zh.md
examples/: README.md  demo_01_value_parser.py  demo_02_shorthand.py  demo_03_computed_style.py  demo_04_fixed_grid.py  demo_05_fr_grid.py  demo_06_mixed_tracks.py  demo_07_auto_placement.py  demo_08_spanning.py  demo_09_alignment.py  demo_10_nested_grid.py  demo_11_box_model.py  demo_12_text_basic.py  demo_13_text_whitespace.py  demo_14_svg_node.py  demo_15_mpl_node.py  demo_16_templates.py  demo_17_png_output.py  demo_18_full_report.py  demo_19_layout_inspection.py  demo_20_mixed_fonts.py  demo_21_overflow_wrap.py  demo_22_image_gallery.py  demo_23_min_max_size.py  demo_24_ellipsis_precision.py  demo_25_pre_line.py  demo_26_opacity.py  demo_27_border_radius.py  demo_28_border_style.py  demo_29_render_to_drawing.py  demo_30_grid_template_areas.py  demo_31_table_api.py  demo_32_waterfall_cards.py  demo_33_rich_text.py  demo_34_markdown_text.py  demo_35_math_formula.py  demo_36_inline_math.py  demo_37_font_embed.py  demo_38_grid_auto_tracks.py  demo_39_independent_border_radius.py  (+14 more)
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
reference/api/: index.html
reference/api/layout/: index.html
reference/api/markup/: index.html
reference/api/math/: index.html
reference/api/nodes/: index.html
reference/api/renderer/: index.html
reference/api/style/: index.html
reference/api/text/: index.html
reference/css-properties/: index.html
reference/templates/: index.html
scripts/: generate_doc_examples.py
search/: search_index.json
src/latticesvg/: __init__.py  templates.py
src/latticesvg/layout/: __init__.py  grid_solver.py
src/latticesvg/markup/: __init__.py  parser.py
src/latticesvg/math/: __init__.py  backend.py
src/latticesvg/nodes/: __init__.py  base.py  grid.py  image.py  (+4 more)
tests/: conftest.py  test_computed_style.py  test_font.py  test_grid_solver.py  test_integration.py  test_markup_parser.py  test_math.py  test_nodes.py  test_renderer.py  test_style_parser.py  test_table_builder.py  test_text_shaper.py  test_writing_mode.py
tutorials/advanced/: index.html
tutorials/grid-layout/: index.html
tutorials/node-types/: index.html
tutorials/rich-text/: index.html
tutorials/styling/: index.html
tutorials/text-typography/: index.html
zh/: index.html
zh/changelog/: index.html
(+31 files in other folders)
