[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latticesvg"
version = "0.1.0"
description = "Grid-based vector layout engine — CSS Grid layout to SVG/PNG"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Qalxry" },
]
keywords = ["svg", "layout", "css-grid", "vector", "typesetting", "png", "report"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]
dependencies = [
    "drawsvg>=2.0",
    "freetype-py>=2.3",
    "quickjax>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Qalxry/LatticeSVG"
Documentation = "https://Qalxry.github.io/LatticeSVG/"
Repository = "https://github.com/Qalxry/LatticeSVG"
Issues = "https://github.com/Qalxry/LatticeSVG/issues"
Changelog = "https://Qalxry.github.io/LatticeSVG/changelog/"

[project.optional-dependencies]
png = ["cairosvg>=2.5"]
hyphens = ["pyphen>=0.16"]
dev = [
    "pytest>=7.0",
    "pillow>=9.0",
    "matplotlib>=3.5",
    "cairosvg>=2.5",
    "pyphen>=0.16",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-static-i18n>=1.2",
    "mkdocs-glightbox>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/latticesvg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
